--- a/src/app/extrato/extrato.component.html
+++ b/src/app/extrato/extrato.component.html
@@ -1,4 +1,19 @@
-<div *ngFor="let transferencia of transferencias">
-<p>Valor: {{ transferencia.valor }} </p>
-<p>Destino: {{ transferencia.destino }} </p>
-</div>
+<table class="tabela">
+    <thead class="tabela_cabecalho">
+        <th class="tabela_cabecalho_conteudo">Data</th>
+        <th class="tabela_cabecalho_conteudo">Valor</th>
+        <th class="tabela_cabecalho_conteudo">Destino</th>
+    </thead>
+
+    <tbody *ngIf="transferencias.length > 0; else listaVazia">
+        <tr class="tabela_linha" *ngFor = "let transferencia of transferencias">
+            <td  class="tabela_conteudo">{{transferencia.data | date: 'dd/MM/yyyy h:m'}}</td>
+            <td  class="tabela_conteudo">{{transferencia.valor | currency }}</td>
+            <td  class="tabela_conteudo">{{transferencia.destino}}</td>
+        </tr>
+    </tbody>
+</table>
+
+<ng-template #listaVazia>
+    <p>Nenhuma transferencia cadastrada</p>
+</ng-template>
