--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,8 @@
-<app-nova-transferencia 
-    (aoTransferir) = "transferir($event)"
-></app-nova-transferencia>
+<header>
+    <a routerLink = "extrato">ScampBank</a>
+    <a routerLink = "nova-transferencia" routerLinkActive="ativo">Nova transferencia</a>
+</header>
 
-<app-extrato [transferencias]="transferencias"></app-extrato>
+<main>
+    <router-outlet></router-outlet>
+</main>
